<resources>
    <string name="app_name">YummyAPP</string>
    <string name="wannaGoKey">가고싶다</string>
    <string name="rvw_create_button">후기 작성</string>
    <string name="영업정보">영업 정보</string>

    <string name="opn_tm_val"></string>
    <string name="wanna_go_val">N</string>
    <string name="tm_val">nn:nn</string>

    <string name="opn_tm">오픈 시간</string>
    <string name="brck_tm">쉬는 시간</string>
    <string name="dnnr_tm">저녁 오픈 시간</string>
    <string name="lo_tm">주문 마감 시간</string>

    <string name="dnnr_tm_key">dnnr_tm_key</string>
    <string name="brck_tm_key">brck_tm_key</string>
    <string name="rst_name">rst_name</string>
    <string name="opn_tm_key">opn_tm_key</string>
    <string name="loc_dtl">상세 주소 들어올 자리</string>
    <string name="rvw">리뷰</string>
    <string name="n">n</string>

    <string name="best">추천</string>
    <string name="good">맛집</string>
    <string name="soso">무난</string>
    <string name="bad">별로</string>
    <string name="worst">최악</string>

    <string name="avg">유져 평가</string>
    <string name="grade">자체 평가</string>

    <string name="addr">위치</string>

    <string name="cnt_key">개의 리뷰</string>
    <string name="createRvw">후기 작성하기</string>

    <string name="takePhoto">사진 찍기</string>
    <string name="loadPhoto">사진 가져오기</string>
    <string name="submit">작성 완료</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="nullCont">내용을 작성 해 주세요.</string>
    <string name="nullPhot">사진은 필수입니다.</string>

    <string name="starKey">미슐랭 평가</string>
    <string name="telKey">전화 번호</string>

    <string name="filter">가격대 별로 보기</string>

    <string name="toCreateRvw">후기 보기</string>
    <string name="rst_nm">RST_NM</string>
    <string name="author">작성자 : </string>
    <string name="cdt">작성일 : </string>

    <string name="show_menu">메뉴 보기</string>
    <string name="menu_board">메뉴판</string>
</resources>
