<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".Rvw.RvwDetail">

    <LinearLayout
        android:id="@+id/LAYOUT_HEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rst_name_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rst_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/rvw_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rvw"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <RatingBar
            android:id="@+id/scoreVal"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/IMG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rvw_phot"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:contentDescription="rvw_phot"
            app:srcCompat="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CONT_HEADER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/author_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/author_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="end"
            android:text="@string/author"
            android:textAppearance="@style/TextAppearance.AppCompat" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/cont"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="5dp"
                android:text="@string/rvw"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cdt_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:text="@string/cdt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/cdt_val"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:text="@string/tm_val"
                    android:textAppearance="@style/TextAppearance.AppCompat" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>